--- a/khyeras/_dev/styles/khyeras_v1/template/overall_footer.html
+++ b/khyeras/_dev/styles/khyeras_v1/template/overall_footer.html
@@ -79,7 +79,7 @@
 	<script type="text/javascript" src="{T_ASSETS_PATH}/javascript/core.js?assets_version={T_ASSETS_VERSION}"></script>
 	<!-- INCLUDEJS forum_fn.js -->
 	<!-- INCLUDEJS ajax.js -->
-	<!-- INCLUDEJS functions.js -->
+	<!-- INCLUDEJS khyeras.js -->
 
 	<!-- IF S_ALLOW_CDN -->
 		<script type="text/javascript">
