--- a/khyeras/styles/khyeras_v1/template/custom/header_define.html
+++ b/khyeras/styles/khyeras_v1/template/custom/header_define.html
@@ -1,5 +1,5 @@
 <!-- DEFINE $DISPLAY_TIME -->
-	<p><!-- IF S_USER_LOGGED_IN -->{LAST_VISIT_DATE}<!-- ELSE -->{CURRENT_TIME}<!-- ENDIF -->.<!-- IF S_USER_LOGGED_IN --> {CURRENT_TIME}.<!-- ENDIF --></p>
+	<p class="date-and-time"><!-- IF S_USER_LOGGED_IN -->{LAST_VISIT_DATE}<!-- ELSE -->{CURRENT_TIME}<!-- ENDIF -->.<!-- IF S_USER_LOGGED_IN --> {CURRENT_TIME}.<!-- ENDIF --></p>
 <!-- ENDDEFINE -->
 
 <!-- DEFINE $DISPLAY_AVATAR -->
