Improvements and bug fixes for submitting profile fields, update UCP header button text

--- a/khyeras/_dev/styles/khyeras_v1/template/custom/header_buttons.html
+++ b/khyeras/_dev/styles/khyeras_v1/template/custom/header_buttons.html
@@ -57,7 +57,7 @@
 		<!-- ENDIF -->
 		<li>
 			<a class="button" href="{U_PROFILE}" title="{L_PROFILE}">
-				<i class="icon rpg-icon rpg-key" aria-hidden="true"></i><span>{L_UCP}</span>
+				<i class="icon rpg-icon rpg-key" aria-hidden="true"></i><span><!-- IF SCRIPT_NAME == 'ucp' -->UCP<!-- ELSE -->{L_UCP}<!-- ENDIF --></span>
 			</a>
 		</li>
 		{$DISPLAY_TOGGLE}
