--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_viewtopic.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_viewtopic.scss
@@ -385,7 +385,7 @@ fieldset.polls dl .poll_option_select, #preview fieldset.polls dl dd {
 	}
 }
 
-.post.online .postprofile dt.no-avatar {
+.online .postprofile dt.no-avatar {
 	margin-top: 30px;
 }
 
