--- a/khyeras/_dev/styles/khyeras_v1/template/simple_footer.html
+++ b/khyeras/_dev/styles/khyeras_v1/template/simple_footer.html
@@ -29,7 +29,7 @@
 <script type="text/javascript" src="{T_ASSETS_PATH}/javascript/core.js?assets_version={T_ASSETS_VERSION}"></script>
 <!-- INCLUDEJS forum_fn.js -->
 <!-- INCLUDEJS ajax.js -->
-<!-- INCLUDEJS functions.js -->
+<!-- INCLUDEJS khyeras.js -->
 
 <!-- EVENT simple_footer_after -->
 
