--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_viewlisting.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_viewlisting.scss
@@ -141,8 +141,13 @@
 		dt[style*='images/icons'] {
 			background-size: 16px auto;
 			background-position: 10px 1px;
-			.list-inner .topictitle {
-				padding-left: 23px;
+			.list-inner {
+				a.unread .icon {
+					@include position(relative, $top: -1px, $left: 23px);
+				}
+				.topictitle {
+					padding-left: 25px;
+				}
 			}
 		}
 		&[class*='read'], &[class*='link'], &[class*='moved'] {
