--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/stylesheet.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/stylesheet.scss
@@ -24,6 +24,7 @@
 @import 'viewlisting';
 @import 'viewtopic';
 @import 'posting';
+@import 'profile';
 @import 'other-sections';
 @import 'cp';
 @import 'header';
